--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grbm</title>
-
+    <title>GRBM</title>
 </head>
 
 <body>
-    <img src="http://smarthub.cl/images/logo-colored.png" alt="">
 
 
 </body>
+
+</html>
