--- a/src/app/components/tray-search/tray-search.component.html
+++ b/src/app/components/tray-search/tray-search.component.html
@@ -1,4 +1,7 @@
+<input class="form-control mr-sm-2" type="text" placeholder="Search T" (keyup.enter)="buscarTexto.value" #buscarTexto>
 <table class="table table-light">
+
+
     <thead>
         <tr>
             <th scope="col">Codigo Imagen</th>
@@ -7,10 +10,9 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let bandeja of tray">
-            <td>{{bandeja._id}}</td>
-            <td>{{bandeja.fechaIngreso}}</td>
-            <td>{{bandeja.idImg}}</td>
+        <tr *ngIf="trayData == buscarTexto">
+
+            <td>{{trayData}}</td>
         </tr>
     </tbody>
 </table>
