--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,17 @@
 body {
+    height: 100%;
+    background: url('./assets/fondo.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
     padding-bottom: 50px;
 }
 
 .main-container {
     margin-top: 80px;
+}
+
+.logo {
+    width: 120px;
 }
