--- a/src/app/components/search-image/search-image.component.html
+++ b/src/app/components/search-image/search-image.component.html
@@ -1,10 +1,23 @@
-<div class="card border-success mb-3" style="max-width: 18rem;">
-    <div class="card-header bg-transparent border-success">fecha Bandeja</div>
-    <div class="card-body text-success">
+<h1></h1>
+<table class="table table-light">
+    <thead>
+        <tr>
+            <th scope="col">QR de la Bandeja</th>
+            <th scope="col">Fecha de Ingreso</th>
+            <th scope="col">Codigo Imagen</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td></td>
+            <td>{{TrayData.fechaIngreso}}</td>
+            <td align="center">
+                <img [src]="TrayData.idImg" width=250px height=default />
+            </td>
+            <td>
 
-        <h1>{{TrayData.fechaIngreso}}</h1>
+            </td>
+        </tr>
 
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    </div>
-    <div class="card-footer bg-transparent border-success">Footer</div>
-</div>
+    </tbody>
+</table>
