--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -14,14 +14,11 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['tray-list']">Bandejas</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['buscar/:_id']">buscar Bandeja</a>
-            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" onsubmit="return false">
 
-            <input class="form-control mr-sm-2" type="text" placeholder="Search T" (keyup.enter)="buscarFoto(buscarImagen.value)" #buscarImagen>
-            <button (click)="buscarFoto(buscarImagen.value)" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
+            <input class="form-control mr-sm-2" type="text" placeholder="Busca Bandejas" (keyup.enter)="buscarFoto(buscarBandeja.value)" #buscarBandeja>
+            <button (click)="buscarFoto(buscarBandeja.value)" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
         </form>
     </div>
 </nav>
