--- a/src/app/components/tray-list/tray-list.component.html
+++ b/src/app/components/tray-list/tray-list.component.html
@@ -1,38 +1,27 @@
-<script src="../../../js/script.js"></script>
 <table class="table table-light">
     <thead>
         <tr>
-            <th scope="col">Id de la Imagen</th>
+            <th scope="col">Codigo QR</th>
             <th scope="col">Fecha de Ingreso</th>
-            <th scope="col">Codigo Imagen</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let bandeja of tray">
-            <td>{{bandeja._id}}</td>
-            <td>{{bandeja.fechaIngreso}}</td>
+        <tr *ngFor="let bandeja of tray; let i = index">
             <td>
-                <img [src]="bandeja.idImg" width=250px height=default />
+                <a (click)="verBandejas(bandeja._id)" class="btn btn-outline-dark" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <p>{{bandeja.codigoQr}}</p>
+                    <p *ngIf=false>{{bandeja._id}}</p>
+                </a>
             </td>
-            <td>
-
-            </td>
+            <td>{{bandeja.fechaIngreso | date:'MMM d, y'}}</td>
         </tr>
-
     </tbody>
 </table>
-
-
-<!--
-<table class="table table-light ">
-    <thead>
-        <tr>
-            <th scope="col ">foto</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let emajen of imageTray ">
-            <td><img [src]="(emajen)" alt=" "></td>
-        </tr>
-    </tbody>
-</table>-->
+<table mat-table>
+    <!-- Name Column -->
+    <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    </ng-container>
+    ...
+</table>
