--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-nav></app-nav>
-<div class="container main-container">
+<div class="container">
     <router-outlet></router-outlet>
 </div>
+
+<!--
+<a mat-list-item href="#"> Home </a>
+<a mat-list-item [routerLink]="['tray-list']"> Bandejas </a>
+<a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>-->
