--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,18 @@
-body {
-    height: 100%;
-    background: url('./assets/fondo.png') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    padding-bottom: 50px;
-}
-
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 .main-container {
     margin-top: 80px;
 }
 
 .logo {
     width: 120px;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
