--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,16 @@
 </head>
 
 <body>
-
+    <mat-grid-list cols="2" rowHeight="2:1">
+        <mat-grid-tile>
+             <div class="wrapper d-flex pr-4">
+            <small class="text-success font-weight-medium mr-2">USD</small>
+            <small class="text-gray">$103,342.50</small>
+          </div>  </mat-grid-tile>
+        <mat-grid-tile></mat-grid-tile>
+        <mat-grid-tile>3</mat-grid-tile>
+        <mat-grid-tile> </mat-grid-tile>
+      </mat-grid-list>
 </body>
 
 </html>
