--- a/src/app/components/search-date/search-date.component.html
+++ b/src/app/components/search-date/search-date.component.html
@@ -1,16 +1,3 @@
-
-<div class="container main-container">
-        <mat-form-field>
-                <input matInput [matDatepicker]="picker" placeholder="Input & change events"
-                       (dateInput)="addEvent('input', $event)" >
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
-              
-              <div class="example-events">
-                <div *ngFor="let e of events">{{e}}</div>
-              </div>
-<div class="mat-elevation-z8">
 <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
     <!--- Note that these columns can be defined in any order.
@@ -18,15 +5,13 @@
 
     <!-- Details Column -->
     <ng-container matColumnDef="detalles">
-        <th mat-header-cell *matHeaderCellDef> detalles </th>
+        <th mat-header-cell *matHeaderCellDef> No. </th>
         <td mat-cell *matCellDef="let element">
-               
-            <a (click)="verBandejas(element._id)"class="btn btn-outline-light"  data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon>details 
-                <p *ngIf=false>{{element._id}}</p>
-                </mat-icon>
-            </a>
-       
+                <a (click)="verBandejas(element._id)"class="btn btn-outline-light"  data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        <mat-icon>details 
+                    <p *ngIf=false>{{element._id}}</p>
+                    </mat-icon>
+                </a>
         </td>
 
     </ng-container>
@@ -34,10 +19,12 @@
     <!-- Qr code Column -->
     <ng-container matColumnDef="codigoqr">
         <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
-        <td mat-cell *matCellDef="let element"> {{element.codigoQr}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.codigoqr}} </td>
     </ng-container>
 
     <!-- Weight Column 
+    
+<img [src]="TrayData.idImg" width=250px height=default />
     <ng-container matColumnDef="weight">
         <th mat-header-cell *matHeaderCellDef> Weight </th>
         <td mat-cell *matCellDef="let element"> {{element._id}} </td>
@@ -53,9 +40,4 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-
-</div>
-
-</div>
-
 
