--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,11 @@
 mat-grid-tile {
-    background: lightblue;
-  }
+    background: rgb(255, 255, 255);
+}
+
+.list-group {
+    width: 100%;
+}
+
+.row {
+    width: 100%;
+}
