--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -1,7 +1,13 @@
 .menu-spacer {
     flex: 1 1 auto;
 }
-.hola{
-height : 100%
+
+.hola {
+    height: 100%;
+    background: transparent;
 }
-        
+
+button {
+    width: 10px;
+    height: 10px;
+}
