--- a/src/app/components/tray-list/tray-list.component.html
+++ b/src/app/components/tray-list/tray-list.component.html
@@ -1,61 +1,54 @@
-
 <div class="container main-container">
-        <mat-form-field>
-                <input matInput [matDatepicker]="picker" placeholder="Input & change events"
-                       (dateInput)="addEvent('input', $event)" >
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
-              
-              <div class="example-events">
-                <div *ngFor="let e of events">{{e}}</div>
-              </div>
-<div class="mat-elevation-z8">
-<table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+    <mat-form-field>
+        <input matInput [matDatepicker]="picker" placeholder="Selecciona una fecha" (dateInput)="addEvent('input', $event)">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
 
-    <!--- Note that these columns can be defined in any order.
+    <div class="mat-elevation-z8">
+        <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+
+            <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
-    <!-- Details Column -->
-    <ng-container matColumnDef="detalles">
-        <th mat-header-cell *matHeaderCellDef> detalles </th>
-        <td mat-cell *matCellDef="let element">
-               
-            <a (click)="verBandejas(element._id)"class="btn btn-outline-light"  data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon>details 
-                <p *ngIf=false>{{element._id}}</p>
-                </mat-icon>
-            </a>
-       
-        </td>
+            <!-- Details Column -->
+            <ng-container matColumnDef="detalles">
+                <th mat-header-cell *matHeaderCellDef> detalles </th>
+                <td mat-cell *matCellDef="let element">
 
-    </ng-container>
+                    <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        <mat-icon>details
+                            <p *ngIf=false>{{element._id}}</p>
+                        </mat-icon>
+                    </a>
 
-    <!-- Qr code Column -->
-    <ng-container matColumnDef="codigoqr">
-        <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
-        <td mat-cell *matCellDef="let element"> {{element.codigoQr}} </td>
-    </ng-container>
+                </td>
 
-    <!-- Weight Column 
+            </ng-container>
+
+            <!-- Qr code Column -->
+            <ng-container matColumnDef="codigoqr">
+                <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
+                <td mat-cell *matCellDef="let element"> {{element.codigoQr}} </td>
+            </ng-container>
+
+            <!-- Weight Column 
     <ng-container matColumnDef="weight">
         <th mat-header-cell *matHeaderCellDef> Weight </th>
         <td mat-cell *matCellDef="let element"> {{element._id}} </td>
     </ng-container>-->
-   
-    <!-- Date Column -->
-    <ng-container matColumnDef="fechaIngreso">
-        <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
-        <td mat-cell *matCellDef="let element"> {{element.fechaIngreso | date:'MMM d, y'}} </td>
-    </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-<mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+            <!-- Date Column -->
+            <ng-container matColumnDef="fechaIngreso">
+                <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
+                <td mat-cell *matCellDef="let element"> {{element.fechaIngreso | date:'MMM d, y'}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+
+    </div>
 
 </div>
-
-</div>
-
-
