--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -19,13 +19,13 @@
                     <input matInput placeholder="Password">
                 </mat-form-field>
 
-                <mat-form-field class="example-full-width">
+                <!--<mat-form-field class="example-full-width">
                     <input matInput placeholder="fg">
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
                     <input matInput placeholder="asd">
-                </mat-form-field>
+                </mat-form-field>-->
 
 
                 <mat-form-field class="example-full-width">
@@ -34,6 +34,7 @@
                         <mat-option [value]="roles" *ngFor="let roles of Roles">{{roles}}
                         </mat-option>
                     </mat-select>
+
                 </mat-form-field>
 
             </mat-card-content>
@@ -43,3 +44,11 @@
         </form>
     </mat-card>
 </div>
+
+<mat-form-field class="example-full-width">
+    <input matInput placeholder="Username">
+</mat-form-field>
+
+<mat-form-field class="example-full-width">
+    <input matInput placeholder="Email">
+</mat-form-field>
