--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,4 +1,13 @@
-<div style="height: 80vh;">
+<mat-toolbar color="primary" class="app-header">
+    <div><img src="../../../../assets/logo-light.png" alt="" class="positronx"></div>
+    <span class="nav-tool-items">
+          <a mat-button routerLink="login" routerLinkActive="active">Log in</a>
+          <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
+        </span>
+</mat-toolbar>
+<router-outlet></router-outlet>
+
+<!--<div style="height: 80vh;">
     <mat-toolbar color="primary">
         <mat-toolbar-row>
             <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
@@ -15,11 +24,11 @@
             </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content fxFlexFill>
-            <router-outlet></router-outlet>
+           
         </mat-sidenav-content>
     </mat-sidenav-container>
 
-</div>
+</div>-->
 
 
 <!--<div style="height: 80vh;">
