--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class=" content">
+<!-- <div class=" content">
 
     <ul class="list-group list-group-flush">
         <h5>
@@ -7,11 +7,116 @@
             <li class="list-group-item">Ultima: {{Lastup | date:'d MMM y'}}</li>
         </h5>
     </ul>
+</div>-->
+
+
+<div class=" content">
+    <div class=" row">
+        <div class=" col-12">
+            <div class=" card card-chart">
+                <div class=" card-header">
+                    <div class=" row">
+                        <div class=" col-sm-6 text-left">
+                            <h5 class=" card-category">Total Shipments</h5>
+                            <h2 class=" card-title">Performance</h2>
+                        </div>
+                        <div class=" col-sm-6">
+                            <div class=" btn-group btn-group-toggle float-right" data-toggle="buttons">
+                                <label class=" btn btn-sm btn-danger btn-simple" (click)="data=datasets[0];updateOptions();clicked=true;clicked1=false;clicked2=false" [ngClass]="{'active':clicked===true}">
+                    <input checked="checked" name="options" type="radio" />
+  
+                    <span
+                      class=" d-none d-sm-block d-md-block d-lg-block d-xl-block"
+                    >
+                      Accounts
+                    </span>
+                    <span class=" d-block d-sm-none">
+                      <i class=" tim-icons icon-single-02"> </i>
+                    </span>
+                  </label>
+                                <label class=" btn btn-sm btn-danger btn-simple" (click)="data=datasets[1];updateOptions();clicked=false;clicked1=true;clicked2=false" [ngClass]="{'active':clicked1===true}">
+                    <input
+                      class=" d-none d-sm-none"
+                      name="options"
+                      type="radio"
+                    />
+  
+                    <span
+                      class=" d-none d-sm-block d-md-block d-lg-block d-xl-block"
+                    >
+                      Purchases
+                    </span>
+                    <span class=" d-block d-sm-none">
+                      <i class=" tim-icons icon-gift-2"> </i>
+                    </span>
+                  </label>
+                                <label class=" btn btn-sm btn-danger btn-simple" (click)="data=datasets[2];updateOptions();clicked=false;clicked1=false;clicked2=true" [ngClass]="{'active':clicked2===true}">
+                    <input class=" d-none" name="options" type="radio" />
+  
+                    <span
+                      class=" d-none d-sm-block d-md-block d-lg-block d-xl-block"
+                    >
+                      Sessions
+                    </span>
+                    <span class=" d-block d-sm-none">
+                      <i class=" tim-icons icon-tap-02"> </i>
+                    </span>
+                  </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" card-body">
+                    <div class=" chart-area"><canvas id="chartBig1"> </canvas></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class=" row">
+        <div class=" col-lg-4">
+            <div class=" card card-chart">
+                <div class=" card-header">
+                    <h5 class=" card-category">Total Shipments</h5>
+                    <h3 class=" card-title">
+                        <i class=" tim-icons icon-bell-55 text-danger-states"> </i> 763,215
+                    </h3>
+                </div>
+                <div class=" card-body">
+                    <div class=" chart-area"><canvas id="chartLineRed"> </canvas></div>
+                </div>
+            </div>
+        </div>
+        <div class=" col-lg-4">
+            <div class=" card card-chart">
+                <div class=" card-header">
+                    <h5 class=" card-category">Daily Sales</h5>
+                    <h3 class=" card-title">
+                        <i class=" tim-icons icon-delivery-fast text-info"> </i> 3,500€
+                    </h3>
+                </div>
+                <div class=" card-body">
+                    <div class=" chart-area"><canvas id="CountryChart"> </canvas></div>
+                </div>
+            </div>
+        </div>
+        <div class=" col-lg-4">
+            <div class=" card card-chart">
+                <div class=" card-header">
+                    <h5 class=" card-category">Completed Tasks</h5>
+                    <h3 class=" card-title">
+                        <i class=" tim-icons icon-send text-success"> </i> 12,100K
+                    </h3>
+                </div>
+                <div class=" card-body">
+                    <div class=" chart-area"><canvas id="chartLineGreen"> </canvas></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
-<!--
-      <mat-grid-list cols="2" rowHeight="2:1">
+<!--  <mat-grid-list cols="2" rowHeight="2:1">
         <mat-grid-tile class="border">
             <div class="wrapper d-flex pr-4">
                 <small class="text-success font-weight-medium mr-2">USD</small>
