--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,20 +1,20 @@
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="box">
         <mat-card-header>
-            <mat-card-title>Log in</mat-card-title>
+            <mat-card-title><img src="../../../../assets/logo-light.png" alt="" class="logo"></mat-card-title>
         </mat-card-header>
 
-        <form class="example-form">
+        <form>
             <mat-card-content>
                 <mat-form-field class="example-full-width">
                     <input matInput placeholder="Username">
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Password">
+                    <input matInput type="password" placeholder="Password">
                 </mat-form-field>
             </mat-card-content>
-            <button mat-stroked-button color="accent" class="btn-block">Log            in</button>
+            <button mat-stroked-button color="primary" class="btn-block" type="submit">Log            in</button>
         </form>
     </mat-card>
 </div>
