--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,54 +1,50 @@
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-    <mat-card class="box">
+    <mat-card class="box2">
         <mat-card-header>
             <mat-card-title>Register</mat-card-title>
         </mat-card-header>
 
-        <form class="example-form">
+        <form (ngSubmit)="onSubmit()">
 
             <mat-card-content>
-                <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Username">
+                <mat-form-field class="generic-fields">
+                    <input [(ngModel)]="usuario.nombre" required matInput placeholder="Nombre" name="nombre">
                 </mat-form-field>
 
-                <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Email">
+                <mat-form-field class="generic-fields">
+                    <input [(ngModel)]="usuario.apPat" matInput placeholder="Apellido Paterno" name="apellidoP">
                 </mat-form-field>
 
-                <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Password">
+                <mat-form-field class="generic-fields">
+                    <input [(ngModel)]="usuario.apMat" matInput placeholder="Apellido Materno" name="apellidoM">
                 </mat-form-field>
 
+                <mat-form-field class="generic-fields">
+                    <input [(ngModel)]="usuario.rut" matInput placeholder="Rut" name="rut">
+                </mat-form-field>
+                <mat-form-field class="fields-large">
+                    <input [(ngModel)]="usuario.email" matInput placeholder="Email" name="email">
+                </mat-form-field>
+
+                <mat-form-field class="generic-fields">
+                    <input [(ngModel)]="usuario.rol" matInput placeholder="Rol" name="Rol">
+                </mat-form-field>
+                <mat-form-field class="fields-large">
+                    <input [(ngModel)]="usuario.ubicacion" matInput placeholder="Ubicación" name="ubicacion">
+                </mat-form-field>
+                <mat-form-field class="example-full-width4">
+                    <input [(ngModel)]="usuario.password" matInput type="password" placeholder="Contraseña" name="password">
+                </mat-form-field>
                 <!--<mat-form-field class="example-full-width">
-                    <input matInput placeholder="fg">
-                </mat-form-field>
-
-                <mat-form-field class="example-full-width">
                     <input matInput placeholder="asd">
                 </mat-form-field>-->
-
-
-                <mat-form-field class="example-full-width">
-                    <mat-label>Choose a role...</mat-label>
-                    <mat-select [(value)]="selected">
-                        <mat-option [value]="roles" *ngFor="let roles of Roles">{{roles}}
-                        </mat-option>
-                    </mat-select>
-
+                <mat-form-field class="example-full-width4">
+                    <input matInput type="password" placeholder="Repetir Contraseña">
                 </mat-form-field>
 
             </mat-card-content>
 
-            <button mat-stroked-button color="accent" class="btn-block">Register</button>
-
+            <button mat-stroked-button color="primary" class="btn-block">Register</button>
         </form>
     </mat-card>
 </div>
-
-<mat-form-field class="example-full-width">
-    <input matInput placeholder="Username">
-</mat-form-field>
-
-<mat-form-field class="example-full-width">
-    <input matInput placeholder="Email">
-</mat-form-field>
