--- a/src/app/components/tray/tray.component.html
+++ b/src/app/components/tray/tray.component.html
@@ -1,3 +1,30 @@
+<mat-card class="details-card">
+    <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>
+            DETALLES
+        </mat-card-title>
+        <mat-card-subtitle>Informacion de la Bandeja</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="Tray.idImg" alt="Photo of a Shiba Inu" height="488" width="216">
+    <mat-card-content>
+        <div class=" card-body">
+            <div class=" chart-area"><strong>CodigoQR:</strong>{{Tray.codigoQr}}</div>
+        </div>
+
+        <div class=" card-body">
+            <div class=" chart-area"><strong>Subida el:</strong> {{Tray.fechaIngreso | date:'fullDate'}}</div>
+        </div>
+        <div class=" card-body">
+            <div class=" chart-area"><strong>Funcionario Encargado</strong></div>
+        </div>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button [routerLink]="['/tray-list']">Regresar</button>
+    </mat-card-actions>
+</mat-card>
+
+
 <!--<table class="table table-light">
         <thead>
             <tr>
@@ -20,7 +47,7 @@
     
         </tbody>
     </table>-->
-<table class="table table-dark">
+<!--<table class="table table-dark">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -37,4 +64,4 @@
         <td> <img [src]="Tray.idImg" width=250px height=default /></td>
       </tr>
     </tbody>
-  </table>
+  </table>-->
