--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="box">
         <mat-card-header>
-            <mat-card-title><img src="../../../../assets/logo-light.png" alt="" class="logo"></mat-card-title>
+            <mat-card-title><img src="../../../../assets/logo-colored.png" alt="" class="logo"></mat-card-title>
         </mat-card-header>
 
         <form>
