--- a/src/app/components/tray/tray.component.html
+++ b/src/app/components/tray/tray.component.html
@@ -1,28 +1,30 @@
-<mat-card class="details-card">
-    <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>
-            DETALLES
-        </mat-card-title>
-        <mat-card-subtitle>Informacion de la Bandeja</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image [src]="Tray.idImg" alt="Photo of a Shiba Inu" height="488" width="216">
-    <mat-card-content>
-        <div class=" card-body">
-            <div class=" chart-area"><strong>CodigoQR:</strong>{{Tray.codigoQr}}</div>
-        </div>
+<div class=login-wrapper2 fxLayout="row" fxLayoutAlign="center center">
+    <mat-card class="box3">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>
+                DETALLES
+            </mat-card-title>
+            <mat-card-subtitle>Informacion de la Bandeja</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image [src]="Tray.idImg" alt="Photo of a Shiba Inu" height="488" width="216">
+        <mat-card-content>
+            <div class=" card-body">
+                <div class=" chart-area"><strong>CodigoQR:</strong>{{Tray.codigoQr}}</div>
+            </div>
 
-        <div class=" card-body">
-            <div class=" chart-area"><strong>Subida el:</strong> {{Tray.fechaIngreso | date:'fullDate'}}</div>
-        </div>
-        <div class=" card-body">
-            <div class=" chart-area"><strong>Funcionario Encargado</strong></div>
-        </div>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button [routerLink]="['/tray-list']">Regresar</button>
-    </mat-card-actions>
-</mat-card>
+            <div class=" card-body">
+                <div class=" chart-area"><strong>Subida el:</strong> {{Tray.fechaIngreso | date:'fullDate'}}</div>
+            </div>
+            <div class=" card-body">
+                <div class=" chart-area"><strong>Funcionario Encargado</strong></div>
+            </div>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button [routerLink]="['/tray-list']">Regresar</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
 
 
 <!--<table class="table table-light">
