--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 html,
 body {
-    height: 100%;
+    max-height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -9,7 +9,7 @@ body {
 body {
     background-image: url(http://smarthub.cl/images/polygon-bg.svg);
     background-position: center;
-    background-size: cover;
+    background-size: 2000px;
     background-repeat: no-repeat;
     min-height: 100vh;
     font-family: 'Roboto', sans-serif;
@@ -27,7 +27,10 @@ body {
 
 .login-wrapper {
     height: 100%;
-    margin-top: 5px;
+    margin-top: 200px;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
 }
 
 .positronx {
@@ -142,6 +145,30 @@ body {
     max-width: 730px;
 }
 
+.box2.back {
+    transform: scale(.95);
+    -webkit-transform: scale(.95);
+    -ms-transform: scale(.95);
+    top: -20px;
+    opacity: .8;
+    z-index: -1;
+}
+
+.box2:before {
+    content: "";
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    position: absolute;
+    top: -10px;
+    background: rgba(255, 255, 255, .6);
+    left: 0;
+    transform: scale(.95);
+    -webkit-transform: scale(.95);
+    -ms-transform: scale(.95);
+    z-index: -1;
+}
+
 .login-wrapper .generic-fields {
     width: 20%;
     margin-right: 40px;
@@ -155,4 +182,53 @@ body {
 .login-wrapper .example-full-width4 {
     width: 100%;
     margin-right: 100px;
+}
+
+.box3 {
+    position: relative;
+    top: 0;
+    opacity: 1;
+    float: left;
+    padding: 60px 50px 40px 50px;
+    width: 100%;
+    background: #fff;
+    border-radius: 10px;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    z-index: 5;
+    /*change size*/
+    max-width: 530px;
+}
+
+.box3.back {
+    transform: scale(.95);
+    -webkit-transform: scale(.95);
+    -ms-transform: scale(.95);
+    top: -20px;
+    opacity: .8;
+    z-index: -1;
+}
+
+.box3:before {
+    content: "";
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    position: absolute;
+    top: -10px;
+    background: rgba(255, 255, 255, .6);
+    left: 0;
+    transform: scale(.95);
+    -webkit-transform: scale(.95);
+    -ms-transform: scale(.95);
+    z-index: -1;
+}
+
+.login-wrapper2 {
+    max-height: 100%;
+    margin-top: 100px;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
 }
