Corregido Errores en Register,Reemplazado Lista de Bandejas por vista de filtro, Anidada la busqueda por fecha a la lista de bandejas

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -9,9 +9,9 @@
 }
 
 .chart-area {
-    background-color: #400090;
+    background-color: #3F51B5;
 }
 
 .card-body {
-    background-color: #400090;
+    background-color: #3F51B5
 }
