--- a/src/app/_auth/login/login.component.html
+++ b/src/app/_auth/login/login.component.html
@@ -14,8 +14,10 @@
                     <input formControlName="password" matInput type="password" placeholder="Password" name="password">
                 </mat-form-field>
             </mat-card-content>
-            <button mat-stroked-button color="primary" [disabled]="loading" class="btn-block" type="submit">Log            in</button>
-            <img *ngIf="loading" src="../../../assets/loading.gif" width="50" height="auto" />
+            <button [disabled]="loading" class="btn btn-primary">
+                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                Login
+            </button>
         </form>
     </mat-card>
 </div>
