--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,6 +10,8 @@
 </div>-->
 
 
+
+
 <div class=" content">
     <div class=" row">
         <div class=" col-12">
@@ -17,8 +19,8 @@
                 <div class=" card-header">
                     <div class=" row">
                         <div class=" col-sm-6 text-left">
-                            <h5 class=" card-category">Total Shipments</h5>
-                            <h2 class=" card-title">Performance</h2>
+                            <h5 class=" card-category">Total Bandejas Subidas </h5>
+                            <h2 class=" card-title"> Reporte Mensual</h2>
                         </div>
                         <div class=" col-sm-6">
                             <div class=" btn-group btn-group-toggle float-right" data-toggle="buttons">
@@ -76,13 +78,22 @@
         <div class=" col-lg-4">
             <div class=" card card-chart">
                 <div class=" card-header">
-                    <h5 class=" card-category">Total Shipments</h5>
-                    <h3 class=" card-title">
-                        <i class=" tim-icons icon-bell-55 text-danger-states"> </i> 763,215
-                    </h3>
+                    <h5 class=" card-category">Bandejas ubicación</h5>
+                    <mat-form-field>
+                        <mat-label>Sucursal</mat-label>
+                        <mat-select [formControl]="ubicacionControl">
+                            <mat-option *ngFor="let ubicacion of ubicaciones" [value]="ubicacion">
+                                {{ubicacion._id.lugar}}
+                            </mat-option>
+                        </mat-select>
+
+
+                    </mat-form-field>
                 </div>
                 <div class=" card-body">
-                    <div class=" chart-area"><canvas id="chartLineRed"> </canvas></div>
+
+                    {{ubicacionControl.value?.total}} Bandejas subidas
+
                 </div>
             </div>
         </div>
