--- a/src/app/components/tray-list/tray-list.component.html
+++ b/src/app/components/tray-list/tray-list.component.html
@@ -1,54 +1,50 @@
 <div class="container main-container">
-    <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="Selecciona una fecha" (dateInput)="addEvent('input', $event)">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
 
-    <div class="mat-elevation-z8">
-        <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
-
-            <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-
-            <!-- Details Column -->
-            <ng-container matColumnDef="detalles">
-                <th mat-header-cell *matHeaderCellDef> detalles </th>
-                <td mat-cell *matCellDef="let element">
-
-                    <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        <mat-icon>details
-                            <p *ngIf=false>{{element._id}}</p>
-                        </mat-icon>
-                    </a>
-
-                </td>
-
-            </ng-container>
-
-            <!-- Qr code Column -->
-            <ng-container matColumnDef="codigoqr">
-                <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
-                <td mat-cell *matCellDef="let element"> {{element.codigoQr}} </td>
-            </ng-container>
-
-            <!-- Weight Column 
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-    </ng-container>-->
-
-            <!-- Date Column -->
-            <ng-container matColumnDef="fechaIngreso">
-                <th mat-header-cell *matHeaderCellDef> fechaIngreso </th>
-                <td mat-cell *matCellDef="let element"> {{element.fechaIngreso |date:'mediumDate':'+0000'}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-
-    </div>
+    <mat-accordion>
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    Busqueda por fecha
+                </mat-panel-title>
+                <mat-panel-description>
+                    Selecciona una fecha
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+            <mat-form-field>
+                <input matInput [matDatepicker]="picker" placeholder="" (dateInput)="addEvent('input', $event)">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+        </mat-expansion-panel>
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    Busqueda por rango de fechas
+                </mat-panel-title>
+                <mat-panel-description>
+                    Selecciona un Rango de Fechas
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+            <input id="rangeDate" name="rangeDate" #input="ngModel" [(ngModel)]="!rangeDate" type="text" bsDaterangepicker class="form-control" />
+            <button mat-button color="primary" (click)="obtainDate(input.viewModel)">Buscar</button>
+        </mat-expansion-panel>
+    </mat-accordion>
 
 </div>
+
+
+<!--<mat-list>
+        <mat-list-item>
+            <mat-form-field>
+                <input matInput [matDatepicker]="picker" placeholder="Selecciona una fecha" (dateInput)="addEvent('input', $event)">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+       <input id="dateRange" name="dateRange" type="text" bsDaterangepicker (click)="getDateByRange(dateRange.value)" #dateRange>
+
+        <mat-list-item> <label for="dateOfBirth">Rango de Fecha</label>
+            <input id="rangeDate" name="rangeDate" #input="ngModel" [(ngModel)]="!rangeDate" type="text" bsDaterangepicker class="form-control" />
+            <button mat-button (click)="obtainDate(input.viewModel)">asdasd</button></mat-list-item>
+    </mat-list> -->
