--- a/src/app/components/search-date/search-date.component.html
+++ b/src/app/components/search-date/search-date.component.html
@@ -1,10 +1,13 @@
 <div class="container main-container">
-    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+        {{error.error}}</div>
+    <table *ngIf="Trayxdate" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
         <!-- Details Column -->
+
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> No. </th>
             <td mat-cell *matCellDef="let element">
@@ -20,7 +23,8 @@
         <!-- Qr code Column -->
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
-            <td mat-cell *matCellDef="let element"> {{element.codigoqr}} </td>
+            <td mat-cell *matCellDef="let element">
+                {{element.codigoqr}} </td>
         </ng-container>
 
         <!-- Weight Column 
