--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,30 @@ body {
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
 }
 
+
+/*NAVBAR*/
+
+.mat-drawer-container {
+    position: absolute;
+    z-index: 1;
+    box-sizing: border-box;
+    -webkit-overflow-scrolling: touch;
+    display: block;
+    overflow: hidden;
+    background: transparent;
+    width: 100%;
+    height: 100%
+}
+
+.mat-drawer .mat-drawer-inner-container .mat-list-base {
+    padding-top: 70px;
+    display: block;
+    -webkit-tap-highlight-color: transparent;
+}
+
+
+/*LOGIN!*/
+
 .login-wrapper {
     height: 100%;
     margin-top: 200px;
@@ -232,14 +256,6 @@ body {
     z-index: -1;
 }
 
-.login-wrapper2 {
-    max-height: 100%;
-    margin-top: 100px;
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-}
-
 .menu-spacer {
     flex: 1 1 auto;
 }
@@ -254,8 +270,70 @@ body {
     background: transparent;
 }
 
-.mat-drawer {
-    margin-top: 3.4%;
+
+/*ESTILOS DEL REGISTER*/
+
+.login-wrapper2 {
+    height: 100%;
+    margin-top: 100px;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+}
+
+.login-wrapper2 .example-form {
+    min-width: 100%;
+    max-width: 100px;
+    width: 100%;
+}
+
+.login-wrapper2 .example-full-width {
+    width: 100%;
+}
+
+.login-wrapper2 .btn-block {
+    width: 100%;
+}
+
+.login-wrapper2 mat-card-header {
+    text-align: center;
+    width: 100%;
+    display: block;
+    font-weight: 700;
+}
+
+.login-wrapper2 mat-card-header mat-card-title {
+    font-size: 30px;
+    margin: 0;
+}
+
+.login-wrapper2 .mat-card {
+    padding: 40px 70px 50px;
+}
+
+.login-wrapper2 .mat-stroked-button {
+    border: 1px solid currentColor;
+    line-height: 54px;
+    background: #FFF7FA;
+}
+
+.login-wrapper2 .mat-form-field-appearance-legacy .mat-form-field-infix {
+    padding: 0.8375em
+}
+
+.login-wrapper2 .generic-fields {
+    width: 20%;
+    margin-right: 40px;
+}
+
+.login-wrapper2 .fields-large {
+    width: 50%;
+    margin-right: 100px;
+}
+
+.login-wrapper2 .example-full-width4 {
+    width: 100%;
+    margin-right: 100px;
 }
 
 
@@ -266,6 +344,11 @@ mat-form-field {
 }
 
 table {
+    width: 100%;
+    margin-top: 8%
+}
+
+mat-accordion {
     width: 100%;
     margin-top: 8%
 }
