estandarizado segun backend

--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -15,6 +15,7 @@
         <mat-nav-list>
             <a [routerLink]="['home']" mat-list-item>Home</a>
             <a [routerLink]="['tray-list']" mat-list-item>Bandejas</a>
+            <a [routerLink]="['get-users']" mat-list-item>Usuarios</a>
             <a [routerLink]="['/register']" routerLinkActive="active" mat-list-item>Registrar Usuario</a>
         </mat-nav-list>
     </mat-sidenav>
