--- a/src/app/components/UserComponets/register/register.component.html
+++ b/src/app/components/UserComponets/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper2" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="box2">
         <mat-card-header>
-            <mat-card-title>Register</mat-card-title>
+            <mat-card-title>Actualizar Usuario</mat-card-title>
         </mat-card-header>
 
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
@@ -9,35 +9,22 @@
             <mat-card-content>
                 <mat-form-field class="generic-fields">
                     <input type="text" formControlName="nombre" matInput placeholder="Nombre" name="nombre" [ngClass]="{ 'is-invalid': submitted && !f.nombre.errors }">
-                    <mat-error *ngIf="f.nombre?.errors?.required">
-                        Ingrese <strong>Nombre</strong>
-                    </mat-error>
+
                 </mat-form-field>
                 <mat-form-field class="generic-fields">
                     <input formControlName="apPat" matInput placeholder="Apellido Paterno" name="apPat" [ngClass]="{ 'is-invalid': submitted && f.apPat.errors }">
-                    <mat-error *ngIf="f.apPat.errors">
-                        ingrese <strong>Apellido</strong>
-                    </mat-error>
+
                 </mat-form-field>
 
                 <mat-form-field class="generic-fields">
                     <input formControlName="apMat" matInput placeholder="Apellido Materno" name="apMat" [ngClass]="{ 'is-invalid': submitted && f.apMat.errors }">
-                    <mat-error *ngIf="f.apMat.errors">
-                        ingrese <strong>Apellido</strong>
-                    </mat-error>
                 </mat-form-field>
 
                 <mat-form-field class="generic-fields">
                     <input formControlName="rut" matInput placeholder="Rut" name="rut" [ngClass]="{ 'is-invalid': submitted && f.rut.errors }">
-                    <mat-error *ngIf="f.rut.errors">
-                        ingrese <strong>Rut</strong>
-                    </mat-error>
                 </mat-form-field>
                 <mat-form-field class="fields-large">
                     <input formControlName="email" matInput placeholder="Email" name="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
-                    <mat-error *ngIf="f.email.errors">
-                        ingrese <strong>Email</strong>
-                    </mat-error>
                 </mat-form-field>
                 <mat-form-field class="generic-fields">
                     <mat-label>Sucursal</mat-label>
@@ -49,9 +36,6 @@
                 </mat-form-field>
                 <mat-form-field class="generic-fields">
                     <input formControlName="telefono" matInput placeholder="Teléfono" name="telefono" [ngClass]="{ 'is-invalid': submitted && f.telefono.errors }">
-                    <mat-error *ngIf="f.telefono.errors">
-                        ingrese <strong>telefono</strong>
-                    </mat-error>
                 </mat-form-field>
 
                 <mat-form-field class="generic-fields">
@@ -60,13 +44,6 @@
                         <mat-option [value]="sexo" *ngFor="let sexo of Sexo">{{ sexo }}
                         </mat-option>
                     </mat-select>
-                </mat-form-field>
-                <mat-form-field class="example-full-width4">
-                    <input formControlName="password" matInput type="password" placeholder="Contraseña" name="password">
-                </mat-form-field>
-
-                <mat-form-field class="example-full-width4">
-                    <input matInput type="password" placeholder="Repetir Contraseña">
                 </mat-form-field>
 
             </mat-card-content>
