--- a/src/app/components/TrayComponents/search-tray-user/search-tray-user.component.html
+++ b/src/app/components/TrayComponents/search-tray-user/search-tray-user.component.html
@@ -1,19 +1,21 @@
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
-        {{error.text}}</div>
-    <table *ngIf="Trayxdaterange" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+        {{error}}</div>
+    <table *ngIf="TrayXUser" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
+        <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let element">
+                {{element.usuario.nombre}}
+            </td>
+        </ng-container>
 
-        <!-- Details Column -->
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>
-                    </button>
-
-
+               
+            </button>
             </td>
 
         </ng-container>
@@ -21,7 +23,8 @@
         <!-- Qr code Column -->
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
-            <td mat-cell *matCellDef="let element"> {{element.codigoqr}} </td>
+            <td mat-cell *matCellDef="let element">
+                {{element.codigoqr}} </td>
         </ng-container>
 
         <!-- Weight Column 
@@ -30,13 +33,7 @@
     <ng-container matColumnDef="weight">
         <th mat-header-cell *matHeaderCellDef> Weight </th>
         <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-    </ng-container>
-     <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon>details
-                        <p *ngIf=false>{{element._id}}</p>
-                         </mat-icon>
-                </a>
--->
+    </ng-container>-->
 
         <!-- Date Column -->
         <ng-container matColumnDef="fechaIngreso">
@@ -49,4 +46,11 @@
     </table>
     <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
 
+
 </div>
+<!--
+<a  (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    
+                     
+                    
+    </a>-->
