--- a/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
+++ b/src/app/components/TrayComponents/tray-date-range-user/tray-date-range-user.component.html
@@ -1,19 +1,19 @@
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
-        {{error.text}}</div>
-    <table *ngIf="Trayxdaterange" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+        {{error}}</div>
+    <table *ngIf="TrayXDateXUser" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
         <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
+                  The actual rendered columns are set as a property on the row definition" -->
 
         <!-- Details Column -->
+
         <ng-container matColumnDef="detalles">
             <th mat-header-cell *matHeaderCellDef> Detalles de bandeja </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" (click)="verBandejas(element._id)">Detalles<p *ngIf=false>{{element._id}}</p>
-                    </button>
-
-
+                   
+                </button>
             </td>
 
         </ng-container>
@@ -21,22 +21,17 @@
         <!-- Qr code Column -->
         <ng-container matColumnDef="codigoqr">
             <th mat-header-cell *matHeaderCellDef> Codigo QR </th>
-            <td mat-cell *matCellDef="let element"> {{element.codigoqr}} </td>
+            <td mat-cell *matCellDef="let element">
+                {{element.codigoqr}} </td>
         </ng-container>
 
         <!-- Weight Column 
-    
-<img [src]="TrayData.idImg" width=250px height=default />
-    <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
-        <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-    </ng-container>
-     <a (click)="verBandejas(element._id)" class="btn btn-outline-light" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon>details
-                        <p *ngIf=false>{{element._id}}</p>
-                         </mat-icon>
-                </a>
--->
+        
+    <img [src]="TrayData.idImg" width=250px height=default />
+        <ng-container matColumnDef="weight">
+            <th mat-header-cell *matHeaderCellDef> Weight </th>
+            <td mat-cell *matCellDef="let element"> {{element._id}} </td>
+        </ng-container>-->
 
         <!-- Date Column -->
         <ng-container matColumnDef="fechaIngreso">
@@ -48,5 +43,4 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-
 </div>
