--- a/src/app/components/UserComponets/search-user/search-user.component.html
+++ b/src/app/components/UserComponets/search-user/search-user.component.html
@@ -28,6 +28,11 @@
             <th mat-header-cell *matHeaderCellDef> ubicacion </th>
             <td mat-cell *matCellDef="let element"> {{element.ubicacion.lugar}} </td>
         </ng-container>
+        <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef> acciones </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button color="primary" (click)="sendID(element.rut)">Actualizar</button></td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
