TIPO DE BANDEJA:POST UPDATE DELETE AND GET

--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -16,6 +16,7 @@
             <a [routerLink]="['home']" mat-list-item>Home</a>
             <a [routerLink]="['tray-list']" mat-list-item>Bandejas</a>
             <a [routerLink]="['get-users']" mat-list-item>Usuarios</a>
+            <a [routerLink]="['traytype/list']" mat-list-item>Tipos de Bandeja</a>
             <a [routerLink]="['/register']" routerLinkActive="active" mat-list-item>Registrar Usuario</a>
             <a [routerLink]="['register/traytype']" routerLinkActive="active" mat-list-item>Registrar Tipo Bandeja</a>
         </mat-nav-list>
