--- a/src/app/components/TypeTray/get-type-tray/get-type-tray.component.html
+++ b/src/app/components/TypeTray/get-type-tray/get-type-tray.component.html
@@ -1,1 +1,32 @@
-<p>get-type-tray works!</p>
+<div class="container main-container">
+    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+        {{error}}</div>
+    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+
+        <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- tipo Column -->
+        <ng-container matColumnDef="tipo">
+            <th mat-header-cell *matHeaderCellDef> Tipo </th>
+            <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+        </ng-container>
+
+
+
+        <!-- detalles Column -->
+        <ng-container matColumnDef="detalles">
+            <th mat-header-cell *matHeaderCellDef> Detalles</th>
+            <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
+        </ng-container>
+        <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef> acciones </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button color="primary" (click)="sendID(element.rut)">Actualizar</button>
+                <button mat-raised-button color="accent" (click)="deleteType(element.tipo)">Eliminar</button></td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
