--- a/src/app/components/UserComponets/search-user/search-user.component.html
+++ b/src/app/components/UserComponets/search-user/search-user.component.html
@@ -30,7 +30,8 @@
         <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef> acciones </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="primary" (click)="sendID(element.rut)">Actualizar</button></td>
+                <button mat-raised-button color="primary" (click)="sendID(element.rut)">Actualizar</button>
+                <button mat-raised-button color="accent" (click)="deleteUser(element._id)">Borrar</button></td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
