--- a/src/app/components/UserComponets/update-users/update-users.component.html
+++ b/src/app/components/UserComponets/update-users/update-users.component.html
@@ -4,26 +4,39 @@
             <mat-card-title>Register</mat-card-title>
         </mat-card-header>
 
-        <form [formGroup]="UpdateForm">
+        <form [formGroup]="UpdateForm" (ngSubmit)="updateUser()">
 
-            <mat-card-content *ngFor="let User of user.usuario">
+            <mat-card-content>
                 <mat-form-field class="generic-fields">
-                    <input type="text" formControlName="nombre" [(ngModel)]="User.nombre" t matInput placeholder="Nombre" name="nombre">
+                    <input formControlName="nombre" matInput placeholder="Nombre" name="nombre" [ngClass]="{ 'is-invalid': submitted && !f.nombre.errors }">
+                    <mat-error *ngIf="!f.nombre?.errors?.required">
+                        Ingrese <strong>Nombre</strong>
+                    </mat-error>
                 </mat-form-field>
                 <mat-form-field class="generic-fields">
-                    <input formControlName="apPat" [(ngModel)]="User.apPat" matInput placeholder="Apellido Paterno" name="apPat" [ngClass]="{ 'is-invalid': submitted && f.apPat.errors }">
-
+                    <input formControlName="apPat" [(ngModel)]="user.apPat" matInput placeholder="Apellido Paterno" name="apPat" [ngClass]="{ 'is-invalid': submitted && f.apPat.errors }">
+                    <mat-error *ngIf="!f.apPat.errors">
+                        ingrese <strong>Apellido</strong>
+                    </mat-error>
                 </mat-form-field>
 
                 <mat-form-field class="generic-fields">
-                    <input type="text" formControlName="apMat" [(ngModel)]="User.apMat" matInput placeholder="Apellido Materno" name="apMat">
+                    <input formControlName="apMat" [(ngModel)]="user.apMat" matInput placeholder="Apellido Materno" name="apMat">
                 </mat-form-field>
 
                 <mat-form-field class="generic-fields">
-                    <input formControlName="rut" [(ngModel)]="User.rut" matInput placeholder="Rut" name="rut" [ngClass]="{ 'is-invalid': submitted && f.rut.errors }">
+                    <input formControlName="rut" [(ngModel)]="user.rut" matInput placeholder="Rut" name="rut" [ngClass]="{ 'is-invalid': submitted && f.rut.errors }">
+                    <mat-error *ngIf="!f.rut.errors">
+                        ingrese <strong>Rut</strong>
+                    </mat-error>
                 </mat-form-field>
-
                 <mat-form-field class="fields-large">
+                    <input formControlName="email" [(ngModel)]="user.email" matInput placeholder="Email" name="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+                    <mat-error *ngIf="!f.email.errors">
+                        ingrese <strong>Email</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field class="generic-fields">
                     <mat-label>Sucursal</mat-label>
                     <mat-select formControlName="ubicacion">
                         <mat-option [value]="Ubicaciones[i]._id._id" *ngFor="let ubicacion of Ubicaciones;let i =index">{{Ubicaciones[i]._id.lugar}}
@@ -31,19 +44,24 @@
 
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field class="fields-large">
-                    <input formControlName="telefono" [(ngModel)]="User.telefono" matInput placeholder="Teléfono" name="telefono" [ngClass]="{ 'is-invalid': submitted && f.telefono.errors }">
+                <mat-form-field class="generic-fields">
+                    <input formControlName="telefono" [(ngModel)]="user.telefono" matInput placeholder="Teléfono" name="telefono" [ngClass]="{ 'is-invalid': submitted && f.telefono.errors }">
+                    <mat-error *ngIf="!f.telefono.errors">
+                        ingrese <strong>telefono</strong>
+                    </mat-error>
                 </mat-form-field>
 
             </mat-card-content>
+
+            <button mat-stroked-button color="primary" class="btn-block">Actualizar</button>
             <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
                 {{error}}
             </div>
-
             <a [routerLink]="['home']" class="btn btn-link">Cancel</a>
         </form>
     </mat-card>
 </div>
+
 
 
 <!-- <div class="form-group">
