--- a/src/app/components/UserComponets/update-users/update-users.component.html
+++ b/src/app/components/UserComponets/update-users/update-users.component.html
@@ -1,7 +1,7 @@
 <div class="login-wrapper2" fxLayout="row" fxLayoutAlign="center center">
     <mat-card class="box2">
         <mat-card-header>
-            <mat-card-title>Register</mat-card-title>
+            <mat-card-title>Actualizar</mat-card-title>
         </mat-card-header>
 
         <form [formGroup]="UpdateForm" (ngSubmit)="updateUser()">
