Request de usuarios hechos

--- a/src/app/components/TrayComponents/search-barcode/search-barcode.component.html
+++ b/src/app/components/TrayComponents/search-barcode/search-barcode.component.html
@@ -1,7 +1,7 @@
 <div class="container main-container">
     <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
         {{error}}</div>
-    <table *ngIf="Trayxbarcode" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+    <table *ngIf="!error" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
         <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
