--- a/src/app/components/UserComponets/search-user/search-user.component.html
+++ b/src/app/components/UserComponets/search-user/search-user.component.html
@@ -1,5 +1,7 @@
 <div class="container main-container">
-    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource">
+    <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
+        {{error}}</div>
+    <table *ngIf="!error" mat-table class="mat-elevation-z8" [dataSource]="dataSource">
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
 
